--- a/app/src/main/res/layout/activity_inspetor.xml
+++ b/app/src/main/res/layout/activity_inspetor.xml
@@ -7,4 +7,28 @@
     android:layout_height="match_parent"
     tools:context=".inspetor">
 
+    <ImageView
+        android:id="@+id/imageView5"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:scaleType="centerInside"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="1.0"
+        app:srcCompat="@drawable/inspetor" />
+
+    <Button
+        android:id="@+id/button8"
+        android:layout_width="147dp"
+        android:layout_height="47dp"
+        android:layout_marginTop="324dp"
+        android:backgroundTint="@color/verdinho"
+        android:text="ENTRAR"
+        android:textColor="@color/verdeescuro"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
